# chatbot-production-project

./: README.md  docker-compose.yaml
backend/: Dockerfile  pyproject.toml
backend/app/: database.py  main.py  migrate_db.py  models.py  schemas.py
backend/app/services/: chat.py
frontend/: Dockerfile  pyproject.toml
frontend/src/: api.py  app.py
