[tool.poetry]
name = "chatgpt-mini-frontend"
version = "0.1.0"
description = "Frontend for ChatGPT 4.0 Mini chat application"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
streamlit = "^1.24.0"
aiohttp = "^3.8.1"
python-dotenv = "^0.19.0"
altair = "4.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"